tests/xml/invalidxml/obsTime/badtime7.xml.README
badtime7.xml: BAD obsTime since a decimal point with no decimal digits is not allowd on by dateTime
